--- a/Programming-Books/src/components/Title.astro
+++ b/Programming-Books/src/components/Title.astro
@@ -1,3 +1,3 @@
-<h1 class=" text-6xl uppercase font-bold text-center">Programming
-    <span class=" block text-[58px]">Books</span>
+<h1 class=" font-black text-4xl md:text-8xl uppercase text-center py-8 px-4">Programming
+    <span class=" block text-[36px] md:text-[58px]">Books</span>
 </h1>
