--- a/Programming-Books/src/pages/index.astro
+++ b/Programming-Books/src/pages/index.astro
@@ -1,20 +1,14 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Title from '../components/Title.astro';
+import ListOfBooks from '../components/ListOfBooks.astro';
 ---
 
 <Layout title="Welcome to Astro.">
 	<main>
 		<Title/>
-
-		<ul class=" grid grid-cols-2 md:grid-cols-3 gap-4">
-			<li>
-				<a class=" hover:scale-105 inline-block transition-all hover:contrast-125" href="/clean-code">
-					<img class=" aspect-[389/500] h-full object-cover w-full rounded" src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1436202607i/3735293.jpg" alt="cleanCodeBookCover">
-				</a>
-			</li>
-
-		</ul>
+		
+		<ListOfBooks>
 
 	</main>
 </Layout>
