--- a/Programming-Books/src/pages/[book].astro
+++ b/Programming-Books/src/pages/[book].astro
@@ -12,6 +12,6 @@ if(!info){
 }
 ---
 
-<Layout title='Libro'>
-    <h1>Libro: </h1>
+<Layout title={`Libro ${info.title}`}>
+    <h1>{info.title}</h1>
 </Layout>
