--- a/Programming-Books/src/pages/[book].astro
+++ b/Programming-Books/src/pages/[book].astro
@@ -13,5 +13,21 @@ if(!info){
 ---
 
 <Layout title={`Libro ${info.title}`}>
-    <h1>{info.title}</h1>
+    <main class=" m-auto max-w-4xl">
+
+        <div class="grid grid-cols-2 gap-x-4">
+
+            <div class=" flex-col">
+                <picture>
+                    <img src={info.img} alt={`Book Cover from ${info.title}`}>
+                </picture>
+            </div>
+
+            <aside>
+                <h1>{info.title}</h1>
+                <p>Opinion: {info.opinion}</p>
+                <p>Author: {info.author}</p>
+            </aside>
+        </div>
+    </main>
 </Layout>
