--- a/Programming-Books/src/pages/index.astro
+++ b/Programming-Books/src/pages/index.astro
@@ -5,7 +5,7 @@ import ListOfBooks from '../components/ListOfBooks.astro';
 ---
 
 <Layout title="Welcome to Astro.">
-	<main>
+	<main class=" m-auto max-w-4xl">
 		<Title/>
 		
 		<ListOfBooks>
