--- a/Programming-Books/src/pages/[book].astro
+++ b/Programming-Books/src/pages/[book].astro
@@ -15,7 +15,7 @@ if(!info){
 <Layout title={`Libro ${info.title}`}>
     <main class=" m-auto max-w-4xl">
 
-        <div class="grid grid-cols-2 gap-x-4">
+        <div class="grid grid-cols-2 gap-x-4 mt-10">
 
             <div class=" flex-col">
                 <picture>
