--- a/Programming-Books/src/layouts/Layout.astro
+++ b/Programming-Books/src/layouts/Layout.astro
@@ -18,7 +18,9 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<slot />
+		<div id="content">
+			<slot />
+		</div>
 	</body>
 </html>
 <style is:global>
@@ -44,6 +46,26 @@ const { title } = Astro.props;
 		if(location.origin != toUrl.origin) return
 
 		//if its on the same page
-		
+		event.intercept({
+			async handler (){
+				//load destination page
+				//using fetch to catch HTML
+				const response = await fetch(toUrl.pathname)//clean-coder
+				const text = await response.text()
+				//take just wht conten inside body tag
+				//using regex to get it
+				const [,data] = text.match(/<body>([\s\S]*)<\/body>/i)
+
+				console.log(data)
+
+
+				document.startViewTransition(() => {
+					//refresh view
+					document.getElementById('content').innerHTML = data
+					//scroll till sky
+					document.documentElement.scrollTop = 0
+				})
+			}
+		})
 	})
 </script>
