--- a/Programming-Books/src/layouts/Layout.astro
+++ b/Programming-Books/src/layouts/Layout.astro
@@ -36,6 +36,12 @@ const { title } = Astro.props;
 		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
 			Bitstream Vera Sans Mono, Courier New, monospace;
 	}
+
+	::view-transition-old(root),
+	::view-transition-new(root) {
+  	animation-duration: 2s;
+}
+
 </style>
 
 <script>
