--- a/Programming-Books/src/pages/[book].astro
+++ b/Programming-Books/src/pages/[book].astro
@@ -19,7 +19,12 @@ if(!info){
 
             <div class="flex flex-col">
                 <picture class="mb-8 w-full relative">
-                    <img class="aspect-[389/500] h-full object-cover w-full max-w-full rounded" src={info.img} alt={`Book Cover from ${info.title}`}>
+                    <img 
+                    class="aspect-[389/500] h-full object-cover w-full max-w-full rounded" 
+                    src={info.img} 
+                    alt={`Book Cover from ${info.title}`}
+                    style={`view-transition-name: book-${info.id}`}
+                    >
                 </picture>
 
                 <a href="#" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center mr-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 justify-center">
